# medml-MLOps

./: .gitignore  Makefile  README.md  dvc.yaml  mlflow.db  params.yaml  pyproject.toml
.dvc/: config
.github/workflows/: ci.yml
api/: app.py
docker/: Dockerfile  docker-compose.yml
notebooks/: README.md
src/: config.py  data_loader.py  evaluate.py  predict.py  preprocessing.py  train.py
tests/: conftest.py  test_api.py  test_data_loader.py  test_end_to_end.py  test_evaluate.py  test_preprocessing.py
